# quadruped-osc

./: .gitignore  Aeq.csv  Aineq.csv  BUILD  C.csv  J.csv  LICENSE  M.csv  MODULE.bazel  README.md  batch_test.py  batch_test_v2.py  bazel-bin  bazel-out  bazel-quadruped-osc  bazel-testlogs  bineq.csv  comparison_test.py  contact_jacobian.py  double_pendulum.py  fixed_base.py  fixed_base_test.py  hardware_test.py  jacobian_test.py  main.cc  mujoco_policy.py  multi_host_spoof.py  osc.py  osc_fixed_base.py  osc_test.py  parallel_test.py  performance_test.py  play_policy.py  qpax_test.py  simulation_test.py  test.py  train.py  unitree_test.py
debug/: H.csv  Jc.csv  beq.csv  ddx_desired.csv  simulation_test.py
models/double_pendulum/: double_pendulum.xml  double_pendulum_z.xml
models/unitree_go2/: go2_mjx_elliptic.xml  go2_mjx_fixed.xml  go2_mjx_torque.xml  scene_mjx_elliptic.xml  scene_mjx_torque.xml
src/: distribution_utilities.py  load_utilities.py  math_utilities.py  metrics_utilities.py  module_types.py  networks.py  optimization_utilities.py  training_utilities.py  transformer_network.py
src/algorithms/apg/: checkpoint_utilities.py  load_utilities.py  loss_utilities.py  network_utilities.py  train.py
src/algorithms/gb_ppo/: checkpoint_utilities.py  load_utilities.py  loss_utilities.py  network_utilities.py  train.py
src/algorithms/osc/: loss_utilities.py  network_utilities.py  train.py
src/algorithms/ppo/: checkpoint_utilities.py  loss_utilities.py  train.py
src/algorithms/ppo_transformer/: load_utilities.py  loss_utilities.py  network_utilities.py  train.py
src/controllers/osc/: controller.py  controller_qpax.py  hardware_utilities.py  utilities.py
src/controllers/osc/tests/: _fixed_base_controller.py
src/envs/: unitree_go2.py  unitree_go2_osc.py
tests/: BUILD.bazel  bazel_run_tests.py  distribution_test.py  evaluation_test.py  foot_force.py  jax_test.py  load_data.py  loss_test.py  networks_test.py  policy_step_test.py  requirements.txt  transformer_test.py
