load("@rules_python//python:defs.bzl", "py_binary")

filegroup(
    name = "data",
    srcs = glob(["data/**"]),
)

py_binary(
    name = "bazel_run_tests",
    srcs = ["bazel_run_tests.py"],
    deps = [
        "@unitree-bazel//bindings:unitree_api_library",
        "@pypi//numpy",
        "@rules_python//python/runfiles",
    ],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "load_data",
    srcs = ["load_data.py"],
    data = [":data"],
    deps = [
        "@unitree-bazel//bindings:unitree_api_library",
        "@pypi//numpy",
    ],
)

py_binary(
    name = "jax_test",
    srcs = ["jax_test.py"],
    deps = [
        "@pypi//jax",
        "@pypi//jaxlib",
    ],
)